[package]
name = "device"
version = "0.2.0"
edition = "2021"
description = "Robotics Dashboard Device"
homepage = "https://roboticsdashboard.com/"
repository = "https://github.com/Robotics-Dashboard/device.git"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v7"] }
nix = { version = "0", features = ["user"] }
reqwest = { version = "0", features = ["json"] }
openssl = { version = "0", features = ["vendored"] }
log = "0"
env_logger = "0"
rust-ini = "0"
async-trait = "0"
common = { path = "../common" }
